# MASTER-Trading-Skills

./: .agentignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_MANIFEST.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  SKILL_LITE.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  calibration_update.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backtest/: __init__.py  broker.py  engine.py  metrics.py
cli/: install.mjs
cli/lib/: agents.mjs  banner-frames.mjs  banner.mjs  colors.mjs  installer.mjs  multiselect.mjs  prompt.mjs  skills.mjs  tree.mjs
docs/: api_reference.md  architecture.md
docs/assets/brand/: BRAND.md
docs/superpowers/specs/: 2026-05-05-master-trading-splus-design.md
docs/tutorials/: 01_getting_started.md  02_backtesting.md  03_web3_execution.md  04_llm_agent.md
examples/: example_agent_tools.py  example_backtest.py  example_inference.py  quickstart.py
scripts/: setup.ps1  setup.sh
skills/: __init__.py
skills/adversarial/: SKILL.md  __init__.py  sentiment.py  whale.py
skills/adversarial/examples/: fomo_detect.py  whale_track.py
skills/agent/: __init__.py  adapter.py  policy.py  schema.py
skills/core/: __init__.py  base.py  logging.py  registry.py  skillpack.py  types.py
skills/execution/: __init__.py  oms.py  pipeline.py  risk.py
skills/execution/connectors/: ccxt_connector.py
skills/execution/web3/: SKILL.md  __init__.py  dex_executor.py  mev_protection.py
skills/execution/web3/examples/: dex_swap.py  gas_price.py
skills/inference/: __init__.py  __main__.py  _calibration_data.py  calibration.py  engine.py  primitives.py  setup_skill.py
skills/signals/: __init__.py
skills/signals/adversarial_rl/: market_maker.py
skills/signals/chaos/: lyapunov.py
skills/signals/evolutionary/: gp_strategy.py
skills/signals/technical/: SKILL.md  funding_arb.py  kelly.py  obi.py
skills/signals/technical/examples/: funding_arb_basic.py  obi_basic.py
skills/signals/topological/: tda.py
tests/: test_adversarial.py  test_agent.py  test_backtest.py  test_calibration.py  test_connector_interface.py  test_core_types.py  test_execution.py  test_inference.py  test_registry.py  test_signals.py  test_skillpack.py  test_strategy_interface.py  test_web3.py
tests/integration/: test_pipeline.py
tools/: build-social-card.mjs
