[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-trading-skills"
version = "3.1.0"
description = "Open-source trading skills for AI agents — backtest, signals, execution, LLM tool surface. By VelonLabs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "VelonLabs", email = "labs@velonlabs.io" }
]
keywords = [
    "quantitative-trading", "algorithmic-trading", "ai-agent", "llm",
    "claude-code", "kimi-code", "cursor", "cline", "skill-pack",
    "web3", "defi", "ccxt", "backtest", "topological-data-analysis",
    "adversarial-rl", "mev", "flashbots", "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
# ---------------------------------------------------------------------------
# Core dependencies — verified by grepping the source: every package below
# is imported somewhere in skills/ or backtest/. Heavier libraries that are
# only needed for specific connectors or signals live in extras.
# ---------------------------------------------------------------------------
dependencies = [
    # Data & numerical
    "numpy>=1.26",
    "pandas>=2.1",
    # Type system + validation
    "pydantic>=2.5",
    # Logging + retry + config
    "structlog>=23.2",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# pip install ".[trading]"  — CEX market data + order routing.
trading = [
    "ccxt>=4.2",
]
# pip install ".[web3]"     — DEX execution, signing, gas.
web3 = [
    "web3>=7.0",
    "eth-account>=0.10",
]
# pip install ".[advanced]" — TDA, evolutionary signals (heavy native deps).
advanced = [
    "ripser>=0.6",
    "persim>=0.3",
    "deap>=1.4",
]
# pip install ".[dev]"      — test + lint + type check toolchain.
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "mypy>=1.7",
    "ruff>=0.1",
    "black>=23.12",
    "pre-commit>=3.6",
    # Tests exercise CCXT + Web3 connectors, so they need the runtime extras.
    "ccxt>=4.2",
    "web3>=7.0",
    "eth-account>=0.10",
]
# pip install ".[security]" — Solidity static analysis (heavy; not for CI).
security = [
    "slither-analyzer>=0.10",
    "halmos>=0.4",
    "mythril>=0.23",
]
# pip install ".[all]"      — everything except security tooling.
all = [
    "ccxt>=4.2",
    "web3>=7.0",
    "eth-account>=0.10",
    "ripser>=0.6",
    "persim>=0.3",
    "deap>=1.4",
]

[project.urls]
Homepage = "https://github.com/velonone/MASTER-Trading-Skills"
Documentation = "https://github.com/velonone/MASTER-Trading-Skills/tree/main/docs"
Repository = "https://github.com/velonone/MASTER-Trading-Skills"
Issues = "https://github.com/velonone/MASTER-Trading-Skills/issues"

# ---------------------------------------------------------------------------
# Hatch build configuration
# The PyPI distribution name (master-trading-skills) does not match a single
# top-level directory — we ship two: `skills` and `backtest`. Tell hatchling
# explicitly so editable / wheel builds succeed in CI.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["skills", "backtest"]

[tool.hatch.build.targets.sdist]
include = [
  "skills",
  "backtest",
  "examples",
  "docs",
  "tests",
  "SKILL.md",
  "SKILL_LITE.md",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "CODE_OF_CONDUCT.md",
  "SECURITY.md",
  "Makefile",
  "Dockerfile",
  ".agentignore",
  "AGENT_MANIFEST.json",
  "pyproject.toml",
  "package.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]
